--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cocktail database</title>
+    <title>Kokteilių receptai</title>
+    <!-- TODO update title dynamically -->
   </head>
   <body>
     <div id="app"></div>
